fixed boolean bug mysql, added string representation for virtual foreign keys, smoke tests for jbang scripts, clean ups